--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
 </head>
 
 <body id="app">
-  <h1>Counter</h1>
+  <div class="container">
+    <div class="left">
+      <div class="text">-1</div>
+    </div>
+    <div class="right">
+      <div class="text">+1</div>
+    </div>
+  </div>
   <div class="app-container">
-    <h2>Click on 'Enter'/'Spacebar' to +1.</h2>
-    <h2>Click on 'D' to -1</h2>
+    <div class="info-container">
+      <h1>Counter</h1>
+      <h2>Click on 'Enter'/'Spacebar' to +1.</h2>
+      <h2>Click on 'D' to -1</h2>
+    </div>
     <div id="counter">0</div>
-    <input type="button" id="reset" value="reset"></div>
+    <input type="button" id="reset" value="reset">
+  </div>
   </div>
   <script src="app.js"></script>
 </body>
