--- a/index.html
+++ b/index.html
@@ -5,17 +5,10 @@
   <title>Counter!</title>
   <link rel="stylesheet" href="https://scorchchamp.github.io/style.css">
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body id="app">
-  <div class="container">
-    <div class="left">
-      <div class="text">-1</div>
-    </div>
-    <div class="right">
-      <div class="text">+1</div>
-    </div>
-  </div>
   <div class="app-container">
     <div class="info-container">
       <h1>Counter</h1>
@@ -25,6 +18,13 @@
     <div id="counter">0</div>
     <input type="button" id="reset" value="reset">
   </div>
+  <div class="container">
+    <div class="left">
+      <div class="text" onclick="minus()">-</div>
+    </div>
+    <div class="right">
+      <div class="text" onclick="add()">+</div>
+    </div>
   </div>
   <script src="app.js"></script>
 </body>
