--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-  <title>Counter!</title>
-  <link rel="stylesheet" href="https://scorchchamp.github.io/style.css">
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body id="app">
+  <script src="./auto-format.js"></script>
   <div class="app-container">
     <div class="info-container">
       <h1>Counter</h1>
