--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body id="app">
-  <script src="./auto-format.js"></script>
+  <script src="https://scorchchamp.github.io/auto-format.js"></script>
   <div class="app-container">
     <div class="info-container">
       <h1>Counter</h1>
